- Updated Rewards for Timear Foresees dailies (now includes Sons of Hodir Commendation Badge)
- German localization updated to include most Wrath of the Lich King quests (thanks Guldukat!)
- Small grammar, clarification and typo fixes (thanks gothic251)
- Updates to localizations: deDE, ruRU, zhTW, zhCN

- Quests added:
	- Call to Arms: Isle of Conquest (Daily)




Version 4.3.5

- TOC updated for Patch 3.2
- Basic support added for Trial of the Crusader, Trial of the Champion and Isle of Conquest.
- Updated rewards for Proof of Demise and Timear Foresees quests.
- Updated Map names for AlphaMap 3.75.
- Updates to localizations: ruRU, zhTW. 

- Fixes:
	- Corrected typo in LBRS: Kibler's Exotic Pets  (thanks gothic251)
	- Clarified what the Grime-Encrusted Ring drops from in Gnomeregan.  (thanks gothic251)
	- Prequest added for Utgarde Keep: A Score to Settle (Horde)  (thanks tailslee)
	
- Quests added:
	- Trial of the Champion: Proof of Demise: The Black Knight (Heroic Daily)


	
Version 4.3.4

- Updated boss numbers for Atlas 1.14.1.
- Small updates and tweaks to a number of quests thanks to info provided by nonameform.
- Localizations updated.

- Quests added:
	- Molten Core: Scrying Goggles? No Problem! (thanks nonameform)
	- Gnomeregan: The Sparklematic 5200! (thanks b@k$$ and nonameform)
	- Scholomance: The Right Piece of Lord Valthalak's Amulet (thanks nonameform)
	- Stratholme: True Masters of the Light (Horde Paladin) (thanks nonameform)
	- Ulduar: Archivum Data Disc (thanks Celellach)
	- Ulduar: The Celestial Planetarium (thanks Celellach)
	- Ulduar: Hodir's Sigil (thanks Celellach)
	- Ulduar: Thorim's Sigil (thanks Celellach)
	- Ulduar: Freya's Sigil (thanks Celellach)
	- Ulduar: Mimiron's Sigil (thanks Celellach)
	- Ulduar: Algalon (thanks Celellach)
	- Ulduar: All Is Well That Ends Well (thanks Celellach)
	- Ulduar: Heroic: Archivum Data Disc (thanks Celellach)
	- Ulduar: Heroic: The Celestial Planetarium (thanks Celellach)